--- a/links.html
+++ b/links.html
@@ -26,11 +26,11 @@
                 <a href="https://blips.club/Mershy">Blips</a>
                 <hr>
                 <h3>Website versions</h3>
-                <a href="https://mershy.neocities.org/oldsite">Version 1</a>
+                <a href="oldsite.html">Version 1</a>
                 <a href="https://mershhub.github.io/Mershy/index.html">Version 2</a>
                 <hr>
                 <h3>Extras</h3>
-                <a href="https://drive.google.com/drive/folders/16bJUaqlwlr2vDN2HS0Hwtcphoul0XF8x?usp=sharing                ">Animation flash files</a>
+                <a href="https://drive.google.com/drive/folders/16bJUaqlwlr2vDN2HS0Hwtcphoul0XF8x?usp=sharing">Animation flash files</a>
                 <a href="https://hbaguette.neocities.org/#misc-bannerlink">Bannerlink ads</a>
                 <hr>
                 <h3>Link this website</h3>
@@ -48,4 +48,5 @@
         <p>© Mershy 2025</p>
     </center>
 </body>
+
 </html>
